# xion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.yaml  pyproject.toml  requirements.txt  todo.md  xion.asd  xion.cabal
benchmarks/: xion0.0.1.json  xion0.0.2.json  xion0.0.3.json  xion0.0.4.json  xion0.0.5.json
docs/: master.aux  master.out  master.tex
logs/: BMDKP(n=128, m=8).json  BP(n=128, m=8).json  ETSP(n=12).json  IGAP(n=64, m=12).json  MC(n=96).json  SCP(n=1024, m=128).json  UFL(n=256, m=64).json  ULS(n=32).json
logs/benchmarks/: xion0.0.4.json
scripts/: benchmark.py  plot_benchmarks.py  run.py  test_IGAP_gurobi_counter_example.py
source/core/: solver.py
source/xion/: types.py
source/xion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: FOF.hs  Main.lsp  Model.lsp  Packages.lsp  Prenex.hs  Simplex.lsp  TPTPParser.hs  main.rs  modelling.rs  standard_form.rs
src/core/: Model.lsp
src/core/utils/: Standard-Form.lsp
src/utils/: Standard-Form.lsp
tests/: Knapsack.lsp
xion/: __init__.py  constants.py  types.py
xion/core/: branch_and_bound.py  branch_and_bound_without_improved_branching.py  presolver.py  solve_lp_relaxation.py  solver.py
xion/models/: HiGHS_model.py  canonical_form.py  milp.py
xion/utils/: evaluator.py  feasibility.py  results.py
xion/utils/generators/: bin_packing.py  binary_multi_dimensional_knapsack_problem.py  euclidean_traveling_salesman_problem.py  integer_generalized_assignment_problem.py  max_clique.py  set_covering.py  traveling_salesman_problem.py  uncapacitated_facility_location.py  (+1 more)
(+3 files in other folders)
