[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xion"
version = "0.0.1"
description = "A simple MILP solver prototype in Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Martin Sig Nørbjerg", email = "martin1509@outlook.com" }]
requires-python = ">=3.12.3"
dependencies = ["numpy", "numba", "scipy", "pytest"]

[tool.setuptools.packages.find]
where = ["source"]
