[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xion"
version = "0.0.5"
description = "A simple MILP solver written 'purely' in Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Martin Sig Nørbjerg", email = "martin1509@outlook.com" }]
requires-python = ">=3.10.3"
dependencies = ["numpy", "numba", "scipy", "matplotlib", "pytest", "loguru"]

[tool.setuptools]
packages = ["xion"]
